<resources>
    <string name="app_name">SitkovDN_02_04</string>
    <string name="name">Список дел</string>
    <string name="email">E-mail</string>
    <string name="password">Пароль</string>
    <string name="hint_emil">you@example.com</string>
    <string name="hint_password">Ваш пароль</string>
    <string name="enter">Войти</string>
    <string name="list">Список дел</string>
    <string name="work">на работе</string>
    <string name="home">дома</string>
</resources>