<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main_screen"
    android:orientation="vertical"
    android:background="@color/lightblue">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list"
        android:textStyle="bold"
        android:textColor="@color/orange"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/btn_go_work"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/work"
        android:background="@drawable/button_main"
        android:textColor="@color/black"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/btn_go_home"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/home"
        android:background="@drawable/button_main"
        android:textColor="@color/black"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="30dp"
        />
</LinearLayout>